grammar
program -> declaration* EOF

declaration -> classDecl | funDecl | variable | statement

classDecl -> "class" IDENTIFIER "{" function* "}"

funDecl -> "fun" function ";"

function -> IDENTIFIER "(" parameters? ")" block
 
parameters -> IDENTIFIER ( "," IDENTIFIER )* ";"
 
variable -> ("let" | "const") IDENTIFIER ("=" expression)? ";" 

statement -> exprStmt | printStmt | block | ifStmt | whileStmt | returnStmt

returnStmt -> "return" expression? ";"

forStmt -> "for" "(" (variable | exprStmt | ";")
           expression? ";" expression? ")" statement

whileStmt -> "while" "(" expression ")" statement

ifStmt -> "if" "(" expression ")" statement
          ("else" "if" "(" expression ")" statement)*
          ("else" statement)?

block -> "{" declaretion* "}"

exprStmt -> expression ";"

printStmt -> "print" expression ";"

expression -> assignment

assignment -> IDENTIFIER "=" assignment | funExpr 

funExpr -> "fun" "(" parameters? ")" block | ternary

ternary -> logicOr ("?" ternary ":" ternary)? 

logicOr -> logicAnd ("or" logicAnd)*

logicAnd -> equality ("and" equality)*

equality -> comparison (("!=" | "==") comparison)*       

comparisona -> term ((">" | ">=" | "<" | "<=") term)* 

term -> factor (("+" | "-") factor)*

factor -> unary (("*" | "/" | "%") unary)* 

unary -> ("-" | "!") unary | call

call -> primary ( "(" args? ")" | "." IDENTIFIER )*

args -> expression ( "," expression )*

primary -> NUMBER | STRING | IDENTIFIER | "true" | "false" |
           "none" | "(" expression ")"     
